Bug 230024 - Clear button in line edit fields on web pages not transparent
Summary: Clear button in line edit fields on web pages not transparent
Status: RESOLVED FIXED
Alias: None
Product: konqueror
Classification: Applications
Component: general (other bugs)
Version First Reported In: 4.6.5
Platform: Compiled Sources Unspecified
: NOR normal
Target Milestone: ---
Assignee: Konqueror Bugs
URL:
Keywords:
: 230765 (view as bug list)
Depends on:
Blocks:
 
Reported: 2010-03-08 23:41 UTC by Christoph Feck
Modified: 2011-09-17 09:09 UTC (History)
6 users (show)

See Also:
Latest Commit:
Version Fixed/Implemented In: 4.7.2
Sentry Crash Report:


Attachments
Line edit (on bugs.kde.org webpage) with wrong clear button (11.11 KB, image/png)
2010-03-08 23:41 UTC, Christoph Feck
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Christoph Feck 2010-03-08 23:41:09 UTC
Version:            (using Devel)
Installed from:    Compiled sources

Screenshot attached. This is a regression from KDE 4.3.
Comment 1 Christoph Feck 2010-03-08 23:41:59 UTC
Created attachment 41460 [details]
Line edit (on bugs.kde.org webpage) with wrong clear button
Comment 2 Andreas K. Huettel 2010-04-11 23:29:49 UTC
Confirmed with kde-4.4.2 on Gentoo Linux
http://bugs.gentoo.org/show_bug.cgi?id=309259
Comment 3 Andreas K. Huettel 2010-06-13 17:04:01 UTC
Confirmed with kde 4.4.4
Comment 4 FiNeX 2010-09-05 17:46:38 UTC
*** Bug 230765 has been marked as a duplicate of this bug. ***
Comment 5 Andreas K. Huettel 2010-11-22 00:32:37 UTC
Confirmed with kde 4.5.3
Comment 6 Jonathan Marten 2011-02-21 11:57:14 UTC
Confirmed with current trunk (4.6.41)
Comment 7 Andreas K. Huettel 2011-04-03 20:29:14 UTC
Confirmed with kde-4.6.2
Comment 8 Jeremy W. Murphy 2011-06-24 03:31:47 UTC
Has anyone noticed that the button is also non-functional?  That is, clicking it has no effect.
Comment 9 Jonathan Marten 2011-06-24 07:59:58 UTC
For comment #8, see also bug 246513.
Comment 10 Andrea Iacovitti 2011-09-17 09:09:06 UTC
Git commit 07d20a558da67fb9f849e2b20c52cf275ea01794 by Andrea Iacovitti.
Committed on 17/09/2011 at 10:12.
Pushed by aiacovitti into branch 'KDE/4.7'.

-Do not set WA_OpaquePaintEvent attribute for line edit clearButton
 (should fix the not transparent background bug)
-Optimize a bit the code to enable/disable it

BUG: 230024
CCBUG: 280226
FIXED-IN: 4.7.2

M  +1    -0    kdeui/widgets/klineedit.cpp
M  +5    -2    khtml/khtmlview.cpp
M  +8    -7    khtml/rendering/render_form.cpp

http://commits.kde.org/kdelibs/07d20a558da67fb9f849e2b20c52cf275ea01794