-Do not set WA_OpaquePaintEvent attribute for line edit clearButton  (should fix the not transparent background bug) -Optimize a bit the code to enable/disable it

BUG: 230024
CCBUG: 280226
FIXED-IN: 4.7.2